--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "lib-flexible": "^0.3.2",
     "register-service-worker": "^1.6.2",
+    "vant": "^2.5.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.18.0",
@@ -31,10 +34,13 @@
     "eslint-plugin-vue": "^6.1.2",
     "lint-staged": "^9.5.0",
     "node-sass": "^4.12.0",
+    "postcss-px2rem": "^0.3.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
+    "ts-import-plugin": "^1.6.3",
     "typescript": "~3.7.5",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuex-persist": "^2.2.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
