--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
+    "@types/jquery": "^3.3.33",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
