--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "jquery": "^3.4.1",
     "lib-flexible": "^0.3.2",
     "register-service-worker": "^1.6.2",
     "vant": "^2.5.1",
@@ -41,7 +42,8 @@
     "ts-import-plugin": "^1.6.3",
     "typescript": "~3.7.5",
     "vue-template-compiler": "^2.6.11",
-    "vuex-persist": "^2.2.0"
+    "vuex-persist": "^2.2.0",
+    "webpack": "^4.42.1"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
