--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.149",
     "jquery": "^3.4.1",
     "lib-flexible": "^0.3.2",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "register-service-worker": "^1.6.2",
     "vant": "^2.5.1",
     "vue": "^2.6.11",
